# EShot

./: .gitignore  CMakeLists.txt  EShot_Setup.iss  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  app.rc  generate_app_icon.py
.github/workflows/: build.yml
resources/: icons.qrc
src/: main.cpp  version.h.in
src/annotation/: AnnotationEngine.cpp  AnnotationEngine.h
src/capture/: CaptureOverlay.cpp  CaptureOverlay.h  PinManager.cpp  PinManager.h  PinnedWindow.cpp  PinnedWindow.h  ScrollingCapture.cpp  ScrollingCapture.h
src/core/: CatboxUploader.cpp  CatboxUploader.h  HotkeyManager.cpp  HotkeyManager.h  ImageUploader.cpp  ImageUploader.h  ImgurUploader.cpp  ImgurUploader.h  OcrEngine.cpp  OcrEngine.h  TranslationManager.h  UguuUploader.cpp
src/recording/: GifEncoder.cpp  GifEncoder.h  RecordingIndicator.cpp  RecordingIndicator.h  ScreenRecorder.cpp  ScreenRecorder.h  VideoRecorder.cpp  VideoRecorder.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AnnotationToolbar.cpp  AnnotationToolbar.h  FirstRunWizard.cpp  FirstRunWizard.h  ImgurUploader.cpp  ImgurUploader.h  OCREngine.cpp  OCREngine.h  OcrDialog.cpp  OcrDialog.h  SettingsDialog.cpp  SettingsDialog.h  UploadDialog.cpp  UploadDialog.h
